fix command icon for dark mode on Safari

--- a/src/theme/searchBar.scss
+++ b/src/theme/searchBar.scss
@@ -46,6 +46,7 @@
 }
 
 .commandIcon {
+    color: #e5e5e5;
     background-color: #0C1428;
     font-size: 15px;
     padding: 3px 4px;
